Fixing break introduced by trying to fix Mozilla toggle thumb issue.

--- a/content/css/themes/crm/datetime-picker.less
+++ b/content/css/themes/crm/datetime-picker.less
@@ -154,10 +154,6 @@
 .time-select {
   padding: 5px 0;
 
-  .toggleStateOn > .thumb {
-    left: 0;
-  }
-
   .meridiem-field {
     display: inline-block;
     height: 32px;
@@ -170,7 +166,6 @@
     .thumb {
       height: 28px;
       width: 33px;
-      right: 0;
     }
     .toggleOn {
       float: left;
